--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "sonner": "^2.0.7",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
